Improved visual display, corrected panning
- Darkened background to improve clarity of light pieces
- Added final puzzle frame shape to assist in laying out pieces
- Corrected issue where initial drag of background caused the puzzle to
offset too far

--- a/squzzle.css
+++ b/squzzle.css
@@ -1,4 +1,4 @@
 * { padding: 0; margin: 0; } html, body { width: 100%; height: 100%; } /* Browser reset and preparation for our viewport sizing */
 
-svg { background: #EEE; }
+svg { background: #333; }
 path { position: absolute; cursor: move; }
